// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogIn redirects user to login form if he is not logged in 1`] = `
<withRouter(LogIn)
  ISLOGGEDIN={false}
  LOG_USER_IN_AND_OUT={[Function]}
>
  <Route>
    <LogIn
      ISLOGGEDIN={false}
      LOG_USER_IN_AND_OUT={[Function]}
      history={
        Object {
          "action": "REPLACE",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "6trjd0",
            "pathname": "/my_orders",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
    >
      <div
        className="d-flex justify-content-center"
      >
        <div
          className="card"
          style={
            Object {
              "marginTop": "9rem",
              "width": "30%",
            }
          }
        >
          <div
            className="card-body"
          >
            <div
              className="alert alert-warning d-none"
            />
            <form
              className="mx-2"
              onSubmit={[Function]}
            >
              <div
                className="input-group my-3"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                    id="basic-addon1"
                    style={
                      Object {
                        "width": "125px",
                      }
                    }
                  >
                    Username
                  </span>
                </div>
                <input
                  aria-describedby="basic-addon1"
                  aria-label="Username"
                  autoComplete="true"
                  autoFocus={true}
                  className="form-control"
                  name="username"
                  onChange={[Function]}
                  placeholder="Enter your username"
                  required={true}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="input-group"
              >
                <div
                  className="input-group-prepend"
                >
                  <span
                    className="input-group-text"
                    id="basic-addon2"
                    style={
                      Object {
                        "width": "125px",
                      }
                    }
                  >
                    Password
                  </span>
                </div>
                <input
                  aria-describedby="basic-addon2"
                  aria-label="Password"
                  autoComplete="true"
                  className="form-control"
                  name="password"
                  onChange={[Function]}
                  placeholder="Password here"
                  required={true}
                  type="password"
                  value=""
                />
              </div>
              <button
                className="btn btn-primary text-uppercase my-3"
                style={
                  Object {
                    "width": "100%",
                  }
                }
                type="submit"
              >
                Sign in
              </button>
            </form>
          </div>
        </div>
      </div>
    </LogIn>
  </Route>
</withRouter(LogIn)>
`;

exports[`LogIn redirects user to order list page if he is already logged in 1`] = `
<withRouter(LogIn)
  ISLOGGEDIN={true}
  LOG_USER_IN_AND_OUT={[Function]}
>
  <Route>
    <LogIn
      ISLOGGEDIN={true}
      LOG_USER_IN_AND_OUT={[Function]}
      history={
        Object {
          "action": "REPLACE",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "6trjd0",
            "pathname": "/my_orders",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={Object {}}
      match={Object {}}
    >
      <Redirect
        push={false}
        to="/my_orders"
      />
    </LogIn>
  </Route>
</withRouter(LogIn)>
`;
